# trajectoryAnalysis

./: averaged_bond_order_parameter.cpp  averaged_bond_order_parameter.hpp  averaged_tetrahedral_order_parameter.cpp  averaged_tetrahedral_order_parameter.hpp  bond_order_parameter.cpp  bond_order_parameter.hpp  correlations.h  histogram_dynamic.h  io.cpp  io.hpp  io_user_xdr.cpp  local_structure_index.cpp  main.cpp  order_parameter.cpp  order_parameter.hpp  radial_distribution_function.cpp  radial_distribution_function.hpp  spatial.cpp  spatial.hpp  struct_def.h  structure_factor.hpp  test_struct_def.cpp  test_struct_def.hpp  tetrahedral_order_parameter.cpp  tetrahedral_order_parameter.hpp  trajectory.cpp  trajectory.hpp  trajectoryAnalysis.h  visualizer.cpp  visualizer.hpp  visualizer_xyz.cpp  visualizer_xyz.hpp
UnitTests/: test_bond_order_chirality_analysis.h  test_bond_order_parameter.h
chirality/: bond_order_chirality_analysis.cpp  bond_order_chirality_analysis.hpp  chirality_analysis.cpp  chirality_analysis.hpp  structure_chirality_analysis.cpp  structure_chirality_analysis.hpp
src/: averaged_bond_order_parameter.cpp  averaged_bond_order_parameter.hpp  averaged_tetrahedral_order_parameter.cpp  averaged_tetrahedral_order_parameter.hpp  bond_order_parameter.cpp  bond_order_parameter.hpp  correlations.cpp  correlations.h  histogram_dynamic.h  io.cpp  io.hpp  io_user_xdr.cpp  io_user_xdr.hpp  local_structure_index.cpp  local_structure_index.hpp  order_parameter.cpp  orientational_radial_distribution_function.cpp  orientational_radial_distribution_function.hpp  quick_test_water.cpp  radial_distribution_function.cpp  radial_distribution_function.hpp  (+11 more)
utils/: CMakeLists.txt  FindGSL.cmake  calculate_bops.py
(+10 files in other folders)
